Added local file and edited startRemotePeers to be able to run instances locally instead of remotely while developing